# river-configs

./: .buildinfo  .gitignore  FAQ.rst  README.md  README.rst  build.ninja  conf.py  generate_versions.rst  genindex.html  glossary.rst  index.html  index.rst  init  init.html  init.rst  objects.inv  pyproject.toml  requirements-lint.txt  requirements.txt  rst2zsh.rst  search.html  searchindex.js  software.html  software.rst  support.rst  todo.html  todo.txt
.github/: dependabot.yml
.github/workflows/: build_HTML.yml  extraction.yml  rstlint.yml  spelling.yml  zizmor.yml
_static/: documentation_options.js
css/: monokai.css
sections/: common_applications.rst  configure_environment.rst  finalising.rst  floating_support.rst  general_setup.rst  input_devices.rst  keybindings.rst  layout.rst  mouse_bindings.rst  run_background_services.rst  software_versions.rst  theming.rst  utility_functions.rst  window_management.rst  window_rules.rst
sections/generate_versions/: main_logic.rst  packages.rst  setup.rst
sections/river/: finalising.rst  floating_support.rst  general_setup.rst  keybindings.rst  layout.rst  mouse_bindings.rst  run_background_services.rst  software_versions.csv  software_versions.rst  theming.rst  utility_functions.rst
sections/rst2zsh/: block_definition.rst  completion.rst  main_logic.rst  parse_function.rst  setup.rst
tools/: generate_versions  rst2zsh  rst2zsh-boot  rst2zsh-docutils
